--- a/index.html
+++ b/index.html
@@ -77,6 +77,18 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Founder and C.E.O (Chief Everything Officer)</h3>
+                            <div class="subheading mb-3">Bawacap Limited</div>
+                            <li> Provide overall strategic leadership and operational oversight for a construction and infrastructure services company.</li>
+                            <li> Manage end-to-end administrative functions including finance, budgeting, procurement, compliance, and contract management.</li>
+                            <li> Lead project planning and execution, coordinating subcontractors, suppliers, and site teams to ensure timely and quality delivery.</li>
+                            <li> Oversee business development, client relationships, and partnerships while driving efficiency, cost control, and sustainable growth.</li>
+
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2024- Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Business Analyst</h3>
                             <div class="subheading mb-3">Maids.cc</div>
                             <li>Analysed and reported operational and financial data using Excel and SQL queries to support decision-making in the operations department.</li>
