--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Founder and C.E.O (Chief Everything Officer)</h3>
                             <div class="subheading mb-3">Bawacap Limited</div>
+                            <li>Founded and lead an infrastructure company focused on building the physical backbone of digital inclusion by delivering cellular tower construction in underserved and hard-to-reach regions.</li>
                             <li> Provide overall strategic leadership and operational oversight for a construction and infrastructure services company.</li>
                             <li> Manage end-to-end administrative functions including finance, budgeting, procurement, compliance, and contract management.</li>
                             <li> Lead project planning and execution, coordinating subcontractors, suppliers, and site teams to ensure timely and quality delivery.</li>
