--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
                             <h3 class="mb-0">Freelance Accountant</h3>
                             <div class="subheading mb-3">Freelance</div>
                             <li> Offer accounting and advisory services to small businesses across various sectors.</li>
-<li> Handle bookkeeping, reconciliation, tax filing, and KRA representation and compliance.</li>
-<li> Prepare and review financial statements, budgets, and management reports.</li>
-<li> Provide consultancy on business services including business plan development, capital budgeting, and cash flow forecasting.</li>
-<li> Maintain accurate financial data through organized entry, reporting, and documentation.</li>
+                            <li> Handle bookkeeping, reconciliation, tax filing, and KRA representation and compliance.</li>
+                            <li> Prepare and review financial statements, budgets, and management reports.</li>
+                            <li> Provide consultancy on business services including business plan development, capital budgeting, and cash flow forecasting.</li>
+                            <li> Maintain accurate financial data through organized entry, reporting, and documentation.</li>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2025 - Present</span></div>
                     </div>
@@ -79,7 +79,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Founder and C.E.O (Chief Everything Officer)</h3>
                             <div class="subheading mb-3">Bawacap Limited</div>
-                            <li>Founded and led an infrastructure company focused on building the physical backbone of digital inclusion by delivering cellular tower construction in underserved and hard-to-reach regions.</li>
+                            <li>Founded and currently lead an infrastructure company focused on building the physical backbone of digital inclusion by delivering cellular tower construction in underserved and hard-to-reach regions.</li>
                             <li> Provide overall strategic leadership and operational oversight for a construction and infrastructure services company.</li>
                             <li> Manage end-to-end administrative functions including finance, budgeting, procurement, compliance, and contract management.</li>
                             <li> Lead project planning and execution, coordinating subcontractors, suppliers, and site teams to ensure timely and quality delivery.</li>
@@ -106,12 +106,12 @@
                             <h3 class="mb-0">Junior Financial Controllerr</h3>
                             <div class="subheading mb-3">Southern Sahil Limited</div>
                             <li>Reconciling, issuing invoices and following up with payments when it comes to client accounts.</li>
-<li>Managing the accounting department of the company and ensuring that every aspect of the company’s finances is being properly analysed, documented, and interpreted. </li>
-<li> Ensuring the company’s books are accurate and monitoring money influx and out flux through expenses and invoices, which are being paid and collected in a timely and efficient manner.</li>
-<li> Production of regular reports that enabled record keeping.</li>
-<li> Following up with payments on overdue accounts.</li>
-<li> Creating reports, directing investment activities, and developing long-term financial plans and goals for the organization.</li>
-<li> Supervising payroll, tax, and financial management.</li>
+                            <li>Managing the accounting department of the company and ensuring that every aspect of the company’s finances is being properly analysed, documented, and interpreted. </li>
+                            <li> Ensuring the company’s books are accurate and monitoring money influx and out flux through expenses and invoices, which are being paid and collected in a timely and efficient manner.</li>
+                            <li> Production of regular reports that enabled record keeping.</li>
+                            <li> Following up with payments on overdue accounts.</li>
+                            <li> Creating reports, directing investment activities, and developing long-term financial plans and goals for the organization.</li>
+                            <li> Supervising payroll, tax, and financial management.</li>
 
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">January 2023 - May 2024</span></div>
